--- a/i2o_Sound_United_Automation/src/main/java/com/i2o/config/config.properties
+++ b/i2o_Sound_United_Automation/src/main/java/com/i2o/config/config.properties
@@ -10,7 +10,7 @@ sudemo@i2oretail.com
 ausgolddemo1@i2oretail.com
 
 i20password=i2oretail@123
-browser=FF
+browser=chrome
 Executiontype=App
-projectid=i2o-prod-su
+projectid=i2o-dev-su
 
