--- a/i2o_Sound_United_Automation/src/main/java/com/i2o/config/config.properties
+++ b/i2o_Sound_United_Automation/src/main/java/com/i2o/config/config.properties
@@ -3,14 +3,16 @@ url2=https://vendorcentral.amazon.com/ap/signin?_encoding=UTF8&clientContext=134
 url3=https://vendorcentral.amazon.com/hz/vendor/members/home/ba
 username=MaExdb2@soundunited.com
 password=Sudeep@227
-URL=https://app.i2oretail.com/
+URL=https://apppreprod.i2oretail.com/
 ClientType=1P
-i20username=sudemo@i2oretail.com
+i20username=cedardemo1@i2oretail.com
 sudemo@i2oretail.com
 ausgolddemo1@i2oretail.com
 
 i20password=i2oretail@123
-browser=chrome
+browser=FF
 Executiontype=App
 projectid=i2o-dev-su
 
+TotalRevuenueLastWeekPrestage=SELECT sum(cast(A.Shipped_COGS as float64)) as cogsprestage FROM CC_I2O_DATA_PRE_STG.vc_sales_diagnostics_sourcing_detail A inner join CC_I2O_DATA_REPO.final_product_master_filtered B on A.ASIN =B.product_code    where  Reporting_Range ='Weekly' and B.org_type ='Amazon_1PP'  group by start_date order by  start_date desc
+TotalreveunelastweekMart=SELECT sum(product_sales) as cogsmart FROM CC_I2O_DATA_MART.viz_sales_conversion_filtered where time_range ='Last Week' 
